Fixed overflow bug on index page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -240,6 +240,9 @@ header#index {
       width: 100%;
       height: 100%;
       pointer-events: none;
+      overflow: hidden;
+      border-radius: 5px;
+      border: 1px solid transparent;
     }
 }
 
